--- a/frontend/src/components/Button/Button.css
+++ b/frontend/src/components/Button/Button.css
@@ -5,4 +5,10 @@
     background: var(--color_action);
     border-radius: 2px;
     color: var(--color_white);
+    border: 1px solid var(--color_action);
+}
+
+.root.--secondary {
+    background: var(--color_white);
+    color: var(--color_action);
 }
