--- a/frontend/src/containers/App/App.pcss
+++ b/frontend/src/containers/App/App.pcss
@@ -1,8 +1,7 @@
-@import "variables.css";
+@import "variables.pcss";
 
 .root {
     height: 100vh;
-    background: var(--color_background);
     display: flex;
     align-items: center;
     justify-content: center;
