--- a/frontend/src/routes/Home/Home.pcss
+++ b/frontend/src/routes/Home/Home.pcss
@@ -2,6 +2,8 @@
 
 .root {
     height: 100vh;
+    width: 100vw;
+    background: #333;
     display: flex;
     align-items: center;
     justify-content: center;
