--- a/frontend/src/styles/global.pcss
+++ b/frontend/src/styles/global.pcss
@@ -2,5 +2,12 @@
 
 body {
     font-family: var(--font-family);
+    background-color: var(--color-gray-lightest);
+    font-weight: var(--font-weight-regular);
+    min-width: 1160px;
     @apply --font-body;
+}
+
+::placeholder {
+    color: var(--color-gray-light);
 }
