--- a/frontend/src/styles/variables/animation.pcss
+++ b/frontend/src/styles/variables/animation.pcss
@@ -1,7 +1,7 @@
 :root {
-    --timing-fast: 0.1s;
-    --timing-medium: 0.25s;
-    --timing-slow: 0.3s;
+    --speed-fast: 0.15s;
+    --speed-medium: 0.25s;
+    --speed-slow: 0.3s;
 
     --easing-standard: cubic-bezier(0.4, 0.0, 0.2, 1);
     --easing-decelerate: cubic-bezier(0.0, 0.0, 0.2, 1);
