--- a/frontend/src/styles/variables/color.pcss
+++ b/frontend/src/styles/variables/color.pcss
@@ -1,11 +1,24 @@
 :root {
-    --color-action: #4B82FB;
-    --color-action-dark: #3c6cfb;
+    --color-primary-darkest: #141829;
+    --color-primary-darker: #1F243D;
+    --color-primary-dark: #252C4B;
+    --color-primary: #36416D;
+    --color-primary-light: #7784BB;
+    --color-primary-lighter: #D2E0FE;
+    --color-primary-lightest: #F5F8FF;
+
+    --color-constructive: #37C47A;
+    --color-destructive: #CC0000;
+    --color-blue: #4B82FB;
 
     --color-white: #fff;
     --color-black: #333;
 
-    --color-gray-border: #e8e8e8;
-    --color-gray-text: #979797;
-    --color-gray-background: #F7F9FA;
+    --color-gray-lightest: #F7F7F7;
+    --color-gray-lighter: #E8E8E8;
+    --color-gray-light: #C4C4C4;
+    --color-gray: #8A8A8A;
+    --color-gray-dark: #707070;
+    --color-gray-darker: #575757;
+    --color-gray-darkest: #2E2E2E;
 }
